force-app/main/default/objects/Expense_Line_Item__c/Expense_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Expense Line Item</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>