force-app/main/default/objects/Expense_Line_Item__c/fields/ATI_Job__c.field-meta.xml
<CustomField>
    <fullName>ATI_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATI Job</label>
    <referenceTo>ATI_Job__c</referenceTo>
    <relationshipLabel>Expense Line Items</relationshipLabel>
    <relationshipName>Expense_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>