force-app/main/default/objects/Expense_Line_Item__c/fields/Number_of_item__c.field-meta.xml
<CustomField>
    <fullName>Number_of_item__c</fullName>
    <inlineHelpText>Starting number of line item series.</inlineHelpText>
    <label>No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>