force-app/main/default/objects/Expense_Line_Item__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <length>20</length>
    <type>Text</type>
</CustomField>