force-app/main/default/objects/Expense_Line_Item__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>This field will keep track of all the group line Item. Decimal number.</description>
    <inlineHelpText>Report is sorted by this number.</inlineHelpText>
    <label>Serial Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>