force-app/main/default/objects/Expense_Line_Item__c/validationRules/LockLineItems.validationRule-meta.xml
<ValidationRule>
    <fullName>LockLineItems</fullName>
    <active>true</active>
    <description>Prevents users from editing once the Expense record is approved</description>
    <errorConditionFormula>AND(
(ISPICKVAL( Expense__r.Status__c , &apos;Approved&apos;) || ISPICKVAL( Expense__r.Status__c , &apos;Submitted&apos;)),
NOT($Profile.Name  == &apos;System Administrator&apos;)
)</errorConditionFormula>
    <errorMessage>Expense has been approved. Line items cannot be created or edited.</errorMessage>
</ValidationRule>